[package]
name = "muovi-lsl-interface"
version = "1.4.0"
edition = "2024"
authors = ["Raul C. Sîmpetru <raul.simpetru@fau.de>"]
description = "Muovi EMG device LSL interface for research applications"
license = "GPL-3.0"
keywords = ["emg", "lsl", "muovi", "biomedical", "research"]
categories = ["science"]

[features]
timing = []

[[bin]]
name = "muovi-lsl-interface"
path = "src/main.rs"

[dependencies]
lsl = "0.1.1"
socket2 = "0.6.1"
byteorder = "1.5"
thiserror = "2.0"
clap = { version = "4.5.53", features = ["derive"] }
chrono = "0.4"

[patch.crates-io]
lsl-sys = { git = "https://github.com/labstreaminglayer/liblsl-rust.git", rev = "afa1d251674591c11ebc06070de60914b6dafccf" }
